mod: added section component, modified api.tsx so it uses fetch instead if axios (fetch makes error handling easier), some refactoring.

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,1 +1,2 @@
-REACT_APP_API_ENDPOINT = //127.0.0.1:8000/api
+// react won't save cookie when endpoint below is 127.0.0.1
+REACT_APP_API_ENDPOINT = //localhost:8000/api
