--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,2 @@
-// react won't save cookie when endpoint below is 127.0.0.1
+// browser won't store cookie when endpoint below is 127.0.0.1
 REACT_APP_API_ENDPOINT = //localhost:8000/api
