--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^17.0.7",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
-    "react": "^17.0.2",
+    "react": "^18.1.0",
     "react-bootstrap": "^2.1.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.1.0",
     "react-hook-form": "^7.28.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -51,5 +48,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.17.12",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@types/jest": "^27.5.1",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.3"
   }
 }
