--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# Byte-compiled / optimized / DLL files
+*/__pycache__/
+*.pyc
+
 # dependencies
 **/node_modules
 
@@ -9,13 +13,21 @@
 # production
 /build
 
+# Distribution / packaging
+.Python
+env/
+build/
+
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.development
+.env.test
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+local-sqlite-db
+
