--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.28.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.2",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
