--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,28 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^6.1.0",
-    "@fortawesome/free-brands-svg-icons": "^6.1.0",
-    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^17.0.35",
-    "@types/react": "^18.0.9",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/node": "^17.0.41",
+    "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "axios": "^0.24.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "react": "^18.1.0",
-    "react-bootstrap": "^2.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
-    "react-hook-form": "^7.28.0",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "react-toastify": "^9.0.2",
-    "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "react-hook-form": "^7.31.3",
+    "react-loading-skeleton": "^3.1.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.4",
+    "typescript": "^4.7.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,9 +53,9 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.17.12",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@types/jest": "^27.5.1",
-    "jest": "^28.1.0",
-    "ts-jest": "^28.0.3"
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.1",
+    "jest": "^28.1.1",
+    "ts-jest": "^28.0.4"
   }
 }
